--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,20 @@ name = "tamamo-x"
 version = "0.1.0"
 edition = "2024"
 
+[dependencies.windows]
+version = "0.62.2"
+features = [
+    "Win32_Foundation",
+    "Win32_System_Threading",
+    "Win32_System_LibraryLoader",
+    "Win32_System_ProcessStatus",
+    "Win32_System_Memory",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_Media",
+    "Win32_UI_WindowsAndMessaging"
+]
+
 [dependencies]
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
